--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -478,6 +478,16 @@
               <FileType>8</FileType>
               <FilePath>..\..\BSP\devices\sensors\MS5611_SPI.cpp</FilePath>
             </File>
+            <File>
+              <FileName>RCIN.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\boards\dev_v1\RCIN.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>RCOUT.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\boards\dev_v1\RCOUT.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -707,11 +717,6 @@
               <FileName>F4Timer.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\HAL\STM32F4\F4Timer.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>F4Timer.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\..\HAL\STM32F4\F4Timer.h</FilePath>
             </File>
           </Files>
         </Group>
