--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -365,7 +365,7 @@
               <MiscControls>--diag_suppress 177,550,1,1295 --gnu</MiscControls>
               <Define>USE_STDPERIPH_DRIVER,STM32F40_41xxx,HSE_VALUE=8000000</Define>
               <Undefine></Undefine>
-              <IncludePath>..\..\HAL\STM32F4\STMLib\STM32F4xx_StdPeriph_Driver;..\..\HAL\STM32F4\STMLib;..\..\HAL\Interface;..\..\HAL\STM32F4;..\..\</IncludePath>
+              <IncludePath>..\..\HAL\STM32F4\STMLib\STM32F4xx_StdPeriph_Driver;..\..\HAL\STM32F4\STMLib;..\..\HAL\Interface;..\..\HAL\STM32F4;..\..\;..\..\modules</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -753,6 +753,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\BSP\devices\sensors\MPU6000.cpp</FilePath>
             </File>
+            <File>
+              <FileName>sensors.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\boards\dev_v1\sensors.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -767,6 +772,21 @@
               <FileName>Resources.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\..\BSP\Resources.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Library</GroupName>
+          <Files>
+            <File>
+              <FileName>space.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\modules\Library\space.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>space.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\..\modules\Library\space.h</FilePath>
             </File>
           </Files>
         </Group>
