--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -14,7 +14,7 @@
         <TargetCommonOption>
           <Device>STM32F405RG</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F4xx_DFP.1.0.8</PackID>
+          <PackID>Keil.STM32F4xx_DFP.2.3.0</PackID>
           <PackURL>http://www.keil.com/pack</PackURL>
           <Cpu>IROM(0x08000000,0x100000) IRAM(0x20000000,0x20000) IRAM2(0x10000000,0x10000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -739,6 +739,11 @@
               <FilePath>..\..\BSP\boards\dev_v1\init.cpp</FilePath>
             </File>
             <File>
+              <FileName>sensors.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\boards\dev_v1\sensors.cpp</FilePath>
+            </File>
+            <File>
               <FileName>MS5611_SPI.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\BSP\devices\sensors\MS5611_SPI.cpp</FilePath>
@@ -774,14 +779,14 @@
               <FilePath>..\..\BSP\devices\sensors\MPU6000.cpp</FilePath>
             </File>
             <File>
-              <FileName>sensors.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\..\BSP\boards\dev_v1\sensors.cpp</FilePath>
-            </File>
-            <File>
               <FileName>UartNMEAGPS.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\BSP\devices\sensors\UartNMEAGPS.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PX4Flow.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\devices\sensors\PX4Flow.cpp</FilePath>
             </File>
           </Files>
         </Group>
