--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -347,8 +347,8 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>2</Optim>
-            <oTime>1</oTime>
+            <Optim>1</Optim>
+            <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
             <Strict>0</Strict>
@@ -892,6 +892,11 @@
               <FileName>ahrs2.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\..\modules\Algorithm\ahrs2.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>mag_calibration.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\modules\Algorithm\mag_calibration.cpp</FilePath>
             </File>
           </Files>
         </Group>
