added async worker in HAL, to run low-priority time-consuming task. implemented field magnetometer calibration, flip the emergency switchh 10 times, interval time between each flip should be less than 1 second, to start calibrating.

--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -788,6 +788,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\BSP\devices\sensors\PX4Flow.cpp</FilePath>
             </File>
+            <File>
+              <FileName>AsyncWorker.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\boards\dev_v1\AsyncWorker.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
