added RGBLED classes and implemented for dev_v2 board. changed dev_v2 board namespace.

--- a/Project/KEIL5/Project.uvprojx
+++ b/Project/KEIL5/Project.uvprojx
@@ -1013,6 +1013,11 @@
               <FileType>8</FileType>
               <FilePath>..\..\BSP\boards\dev_v2\sensors.cpp</FilePath>
             </File>
+            <File>
+              <FileName>RGBLED.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\..\BSP\boards\dev_v2\RGBLED.cpp</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
